--- a/summative-assessment-1.Rmd
+++ b/summative-assessment-1.Rmd
@@ -12,7 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-<img src = "https://drive.google.com/file/d/1GyTLZxwkWFRkbSyUHgtwwS9pH8tKRBww/view">
+
+<iframe src="https://drive.google.com/file/d/1GyTLZxwkWFRkbSyUHgtwwS9pH8tKRBww/preview" width="640" height="480" allow="autoplay"></iframe>
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
