--- a/summative-assessment-1.Rmd
+++ b/summative-assessment-1.Rmd
@@ -32,13 +32,13 @@ text-align: justify}
 
 ### The Setup
 
-To understand how the Monty Hall problem works, let's look at how it is set up:
+To understand how the Monty Hall problem works, let's look at how it is setup:
 
 <img src="https://static.tvtropes.org/pmwiki/pub/images/ao5z6.png" width="100%" height="100%"/>
 
  
 
-Imagine you are on a gameshow. There are 3 doors, behind which are two goats and a car. You pick a door (call it door 1), but you do not open it. The game show host opens one of the other two doors (doors 2 and 3) and reveals a goat.
+Imagine you are on a game show. There are three doors, behind which are two goats and a car. You pick a door (call it door 1). However, you do not open it. The game show host opens one of the other two doors (doors 2 and 3) and reveals a goat.
 
  
 
@@ -52,7 +52,7 @@ If you stick with your first choice, you can't improve your chances. Remember th
 
  
 
-> **Answer:** Always switch doors.
+> **Answer:** Always switch doors!
 
  
 
@@ -62,7 +62,7 @@ Still not convinced? Let's look at it in a more intuitive way.
 
  
 
-Given the same type of problem Monty Hall shows you 100 doors instead of 3 doors. You are now asked to choose one. Assuming you choose door number 1, Monty Hall opens 98 doors which he knows do not have prizes or behind them are goats. You are now left behind with two doors, the door you chose and the one that Monty Hall did not open.
+Given the same type of problem, Monty Hall shows you 100 doors instead of 3 doors. You are now asked to choose one. Assuming you choose door number 1, Monty Hall opens 98 doors that he knows do not have prizes or behind them are goats. You are now left behind with two doors, the door you chose and the one that Monty Hall did not open.
 
 Now given the same question, will you switch? Well, you should! Initially you had a 1/100 chance of getting the prize, but after eliminating the other 98 doors, switching to the other door will give you a 99/100 chance of winning.
 
@@ -70,7 +70,7 @@ Now given the same question, will you switch? Well, you should! Initially you ha
 
 > **Why you should switch?**
 >
-> Switching would give you higher odds of winning. Your initial chances of winning are always 1/100 (depending on the number of doors, in this case it's 100). Even if Monty Hall opens the doors he knows does not have the prize, switching doors will always give you higher odds of winning since the odds of winning (when switching. 99/100) does not change.
+> Switching would give you higher odds of winning. Your initial chances of winning are always 1/100 (depending on the number of doors, in this case, it's 100). Even if Monty Hall opens the doors that he knows do not have the prize, switching doors will always give you higher odds of winning since the odds of winning would become 99/100. 
 
  
 
@@ -83,7 +83,7 @@ Now given the same question, will you switch? Well, you should! Initially you ha
 
 ### Intro to PCSO
 
->The PCSO, or the Philippine Charity Sweepstakes Office, is a government agency that is responsible for managing and providing funds for other government agencies and activities such as health programs, medical assistance and services. They have organized various programs, such as the lottery games and sweepstakes, for the general public to take part in. There are 6-pick number lottery games that the PCSO manages, which include the Lotto 6/42, MegaLotto 6/45, SuperLotto 6/49 GrandLotto 6/55 and finally, the UltraLotto 6/58, which has a grand prize of 50 million Philippine pesos [4].
+>The PCSO, or the Philippine Charity Sweepstakes Office, is a government agency responsible for managing and providing funds for other government agencies and activities such as health programs, medical assistance, and services. They have organized various programs, such as the lottery games and sweepstakes, for the general public to take part in. There are 6-pick number lottery games that the PCSO manages, which include the Lotto 6/42, Mega Lotto 6/45, SuperLotto 6/49, Grand Lotto 6/55, and finally, the Ultra Lotto 6/58, which has a grand prize of 50 million Philippine pesos [4].
 
 <img src="https://i.postimg.cc/SQP14StF/658.png" width="100%" height="100%"/>
 
@@ -93,13 +93,13 @@ Now given the same question, will you switch? Well, you should! Initially you ha
 
 ### Probability of Winning the 6/58 
 
->In order to win the *Ultra Lotto 6/58*, one must have the correct combination of six numbers that would be given on either the Tuesday, Friday, or Sunday of the week. This lotto would include the numbers 1-58, where in numbers already drawn cannot be drawn again. Therefore, the probability of getting a winning combination of numbers can be expressed by the Combination Formula [6]:
+>In order to win the *Ultra Lotto 6/58*, one must have the correct combination of six numbers that would be given on a Tuesday, Friday, or Sunday of the week. This lotto would include the numbers 1-58, wherein numbers already drawn cannot be drawn again. Therefore, the probability of getting a winning combination of numbers can be expressed by the Combination Formula [6]:
 
 <img src="https://i.postimg.cc/G277HdLD/nCr.png" width="100%" height="100%"/>
 
 > We are able to find the possible combinations of 6 numbers that can be formed from the collection of 58 unique numbers. In other words, "58C6" or "58 Choose 6."
 
->The result is **40,475,358 possible combinations** all in all. Therefore, an individual would have a 1 in 40,475,358 chance of winning the jackpot.
+>The result is **40,475,358 possible combinations** all in all. Therefore, an individual would have a **1 in 40,475,358 chance** of winning the jackpot.
 
 ### How much would it cost to cover all possible combinations?
 
@@ -107,7 +107,7 @@ Now given the same question, will you switch? Well, you should! Initially you ha
 
 Since each Ultra Lotto 6/58 ticket costs 20 pesos each, we can multiply that to the total number of possible combinations of 40,475,358 to get **809,507,160 pesos**.
 
-Since the grand prize is assured at a minimum of 50 million pesos, attempting to cover all of the possible number combinations for the 6/58 will, therefore, *incur a massive loss on the bettor*.
+> The grand prize is assured at a minimum of 50 million pesos. Therefore, attempting to cover all of the possible number combinations for the 6/58 will **incur a massive loss on the bettor**.
 
 If someone else happens to win the jackpot as well, the loss will be even greater, as the 50 million peso prize will be divided equally among the winners.
 
